--- a/index.html
+++ b/index.html
@@ -32,18 +32,19 @@
 
     <header class="bg-light py-5">
         <div class="container text-center">
-            <h1 class="display-4">Welcome to E-Document System</h1>
-            <p class="lead">Streamline your organization's document management efficiently and securely.</p>
+            <h1 class="display-4">Welcome to Code Project System</h1>
+            <p class="lead">ที่นี่รวมโค้ดที่รันไม่ได้ไว้ให้ดูต่างหน้า.</p>
         </div>
     </header>
 
     <section class="container my-5">
         <h2 class="text-center mb-4">About Us</h2>
+        <a href="">My Project CSI 205 Sophomore (2 term 1) </a>
         <p>
-            The E-Document System is an internal document management platform designed to enhance collaboration and streamline workflows within organizations. Inspired by Google Drive, our system ensures that all your documents are easily accessible, secure, and organized.
+            ว่างๆไว้วางสปอน
         </p>
         <p>
-            With roles ranging from Executives to Members, our system is tailored to meet diverse needs while maintaining robust security and control.
+           เขียนอะไรนิดหน่อยเดี๋ยวมันจะว่าง
         </p>
     </section>
 
